# metalloprotein

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
src/: camera.rs  chemicals.rs  elements.rs  gui.rs  main.rs  representations.rs  system.rs
src/representations/: ball_and_stick.rs  licorice.rs  spacefill.rs
