[package]
name = "metalloprotein"
version = "0.1.0"
edition = "2021"
description = "Biomolecular visualization for the Web and Desktop alike"
repository = "https://github.com/yoshanuikabundi/metalloprotein"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [] # Keywords for discoverability. crates.io accepts a maximum of 5 keywords fitting the regex /[a-Z][a-Z0-9\-_]{0,19}/
categories = [] # Categories for discoverability. crates.io accepts a maximum of 5 categories from the list at https://crates.io/category_slugs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
thiserror = "1.0.30"
eyre = "0.6.1"
bevy_egui = "0.11.1"
rfd = "0.8.0"
futures-lite = "1.12.0"

[dependencies.bevy]
version = "0.6"
# Disable the default features if there are any that you do not want
default-features = false
features = [
  "render",
  "bevy_winit",
  "x11",
  "wayland",
]

[target.'cfg(not(target_family="wasm"))'.dependencies]
clap = { version = "3.1.2", features = ["derive"] }
chemfiles = {version = "0.10.2" , features = ["build-from-sources"] }

[target.'cfg(target_family="wasm")'.dependencies]
web-sys = {version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
lto = true
codegen-units = 1
